fix background image gap

--- a/style.css
+++ b/style.css
@@ -5,20 +5,15 @@ body {
   width: 375px;
 }
 
-.p_one_container {
-  width: 327px;
-  border-bottom-left-radius: 50px;
-  background-color: #fff;
-  display: flex;
-  flex-flow: column nowrap;
-  padding: 20px;
-}
-
 .top_nav {
   display: flex;
+  width: 327px;
+  height: 100%;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  background-color: #fff;
+  padding: 20px;
 }
 
 .my_logo {
@@ -32,9 +27,16 @@ body {
   text-decoration: none;
 }
 
-.intro_desc_conn {
-  padding-bottom: 40px;
-  padding-top: 40px;
+.p_one_container {
+  border-bottom-left-radius: 50px;
+  background-color: #fff;
+  display: flex;
+  flex-flow: column nowrap;
+  width: 327px;
+  padding: 20px;
+  background-image: url("./img/header_shapes_mobile.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .self_intro {
@@ -45,6 +47,8 @@ body {
   line-height: 52px;
   color: #172b4d;
   margin-bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 0;
 }
 
 .self_desc {
@@ -54,7 +58,6 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #344563;
-  text-align: justify;
   padding-top: 0;
 }
 
@@ -66,6 +69,8 @@ body {
   line-height: 24px;
   color: #7f8cff;
   text-align: left;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .social_icons {
@@ -74,16 +79,13 @@ body {
   justify-content: flex-start;
   align-items: baseline;
   list-style: none;
-  padding: 0;
+  padding-left: 0;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .socials {
   margin-right: 20px;
   min-height: 20px;
-}
-
-.p1_main_section {
-  background-image: url("./img/header_shapes_mobile.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  padding-bottom: 50px;
 }
